# ck-qaic

./: .ckr.json  .gitignore  README.audit-v1.1.md  README.audit-v2.0.md  README.docker.md  README.md  README.r282_z93_q5_8_std.md
cmdgen/: README.md
cmdgen/.cm/: alias-a-benchmark.image-classification.qaic-loadgen  alias-a-benchmark.inference.qaic-loadgen  alias-a-benchmark.object-detection-large.qaic-loadgen  alias-a-benchmark.object-detection-small.qaic-loadgen  alias-a-benchmark.object-detection.qaic-loadgen  alias-a-benchmark.packed-bert.qaic-loadgen  alias-u-05ee58d2d664fb59  alias-u-46ef9d58f8d45dda  alias-u-49e7a2bb59f5737e  alias-u-9fb917497ea245a4  alias-u-b3165acf4e018392  alias-u-bc4415fb58571770
docker/: README.md  build.sh  build_ck.sh
docker/.cm/: alias-a-base  alias-a-bert  alias-a-coco  alias-a-imagenet  alias-a-imagenet-preprocessed  alias-a-resnet50  alias-a-retinanet  alias-a-ssd-mobilenet  alias-a-ssd-resnet34  alias-u-249c883a8efcf3f6  alias-u-4fabef7e0ad24fe4  alias-u-6bfa0a9d475bfea6  alias-u-7bb85ff4735acce4  alias-u-d4d1585ae599bed8
docker/base/: Dockerfile.base.centos7  Dockerfile.centos  Dockerfile.centos7  Dockerfile.centos7.ck  Dockerfile.centos7.qaic  Dockerfile.ck  Dockerfile.ck.centos  Dockerfile.ck.centos7  Dockerfile.qaic  (+8 more)
package/lib-nms-abp/: CMakeLists.txt
package/lib-nms-abp/.cm/: info.json  meta.json
package/lib-nms-abp/inc/: bitcasts.h  fp16.h  nms_abp.h  nms_abp.hpp
package/lib-nms-abp/scripts.linux/: post-install2.sh  pre-download.sh
package/lib-nms-abp/src/: CMakeLists.txt  nms_abp.cxx
program/: README.md
(+675 files in other folders)
